--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <ul>
 <li>Samples from the Multi-Speaker Generative model trained on 84 speaker (~20 hours) on the VCTK dataset.</li>
 <li>Pretrained model: <a href="https://drive.google.com/file/d/1wq5BkY9LNATadpe_VbHGQcN5pSG7d0AP/view?usp=sharing">link</a></li>
-/*<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/43579764f35de6b8bac2b18b52a06e4e11b705b2">4357976</a></li>*/
+<!--<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/43579764f35de6b8bac2b18b52a06e4e11b705b2">4357976</a></li>-->
 </ul>
 
-/*<p>Scientists at the CERN laboratory say they have discovered a new particle.</p>*/
+<!--<p>Scientists at the CERN laboratory say they have discovered a new particle.</p>-->
 
 
-/*<p>(74 chars, 13 words)</p>*/
+<!--<p>(74 chars, 13 words)</p>-->
 
 <li>Samples from speaker number 84 from training set</li>
 
@@ -60,7 +60,7 @@ Your browser does not support the audio element.
 
 <p>I won't make an official complaint.</p>
 
-/*<p>(91 chars, 18 words)</p>*/
+<!--<p>(91 chars, 18 words)</p>-->
 
 <p><audio controls="controls" >
 <source src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_84/step000009400_predicted.wav" autoplay/>
@@ -71,7 +71,7 @@ Your browser does not support the audio element.
 
 <p>They make a selective perception process.</p>
 
-/*<p>(69 chars, 13 words)</p>*/
+<!--<p>(69 chars, 13 words)</p>-->
 
 <p><audio controls="controls" >
 <source src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_84/step000009300_predicted.wav" autoplay/>
@@ -80,7 +80,7 @@ Your browser does not support the audio element.
 
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_84/step000009300_alignment.png" /></div>
 
-/*<p>The Senate&rsquo;s bill to repeal and replace the Affordable Care Act is now imperiled.</p>
+<!--<p>The Senate&rsquo;s bill to repeal and replace the Affordable Care Act is now imperiled.</p>
 
 <p>(81 chars, 16 words)</p>
 
@@ -112,21 +112,21 @@ Your browser does not support the audio element.
 </audio></p>
 
 <div align="center"><img src="/deepvoice3_pytorch/audio/deepvoice3/3_keithito/5_checkpoint_step000210000_alignment.png" /></div>
-*/
+-->
 
 <h2 id="speaker-adaptation-speaker-85">Speaker 85</h2>
 
 <ul>
 <li>Samples from a model adapted to speaker number 85</li>
 <li>Pretrained model: <a href="https://drive.google.com/file/d/1Y3rKn-trK86kEzud3UjEbs0pOgrO57yg/view?usp=sharing">link</a></li>
-/*<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/0421749af908905d181f089f06956fddd0982d47">0421749</a></li>*/
+<!--<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/0421749af908905d181f089f06956fddd0982d47">0421749</a></li>-->
 </ul>
 
 <h3 id="predicted-voices-for-speaker-84">Predicted Voices for speaker 84</h3>
 
-/*<p>(69 chars, 11 words)</p>*/
+<!--<p>(69 chars, 11 words)</p>-->
 
-/*<p><strong>225, 23,  F,    English,    Southern,  England</strong> (ID, AGE,  GENDER,  ACCENTS,  REGION)</p>*/
+<!--<p><strong>225, 23,  F,    English,    Southern,  England</strong> (ID, AGE,  GENDER,  ACCENTS,  REGION)</p>-->
 
 <p>Players are fighting to stay in the team</p>
 <p><audio controls="controls" >
@@ -136,7 +136,7 @@ Your browser does not support the audio element.
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_85/step000015600_alignment.png" /></div>
 
 
-/*<p><strong>226,  22,  M,    English,    Surrey</strong></p>*/
+<!--<p><strong>226,  22,  M,    English,    Surrey</strong></p>-->
 
 <p>The difference in rainbow depends considerably on the size of the drops and the width of the coloured band increases as the size of the drops increase.</p>
 <p><audio controls="controls" >
@@ -145,7 +145,7 @@ Your browser does not support the audio element.
 </audio></p>
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_85/step000015400_alignment.png" /></div>
 
-/*<p><strong>227,  38,  M,    English,    Cumbria</strong></p>*/
+<!--<p><strong>227,  38,  M,    English,    Cumbria</strong></p>-->
 
 <p>I am not a fan of both.</p>
 <p><audio controls="controls" >
@@ -165,9 +165,9 @@ Your browser does not support the audio element.
 
 <h3 id="predicted-voices-for-speaker-86">Predicted Voices for speaker 86</h3>
 
-/*<p>(69 chars, 11 words)</p>*/
+<!--<p>(69 chars, 11 words)</p>-->
 
-/*<p><strong>225, 23,  F,    English,    Southern,  England</strong> (ID, AGE,  GENDER,  ACCENTS,  REGION)</p>*/
+<!--<p><strong>225, 23,  F,    English,    Southern,  England</strong> (ID, AGE,  GENDER,  ACCENTS,  REGION)</p>-->
 
 <p>The auction will be held tomorrow.</p>
 <p><audio controls="controls" >
@@ -177,7 +177,7 @@ Your browser does not support the audio element.
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_86/step000016800_alignment.png" /></div>
 
 
-/*<p><strong>226,  22,  M,    English,    Surrey</strong></p>*/
+<!--<p><strong>226,  22,  M,    English,    Surrey</strong></p>-->
 
 <p>It's too pretty. It's too small.</p>
 <p><audio controls="controls" >
@@ -186,7 +186,7 @@ Your browser does not support the audio element.
 </audio></p>
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_86/step000016600_alignment.png" /></div>
 
-/*<p><strong>227,  38,  M,    English,    Cumbria</strong></p>*/
+<!--<p><strong>227,  38,  M,    English,    Cumbria</strong></p>-->
 
 <p>The greeks used to imagine that it was a sign from the gods to foretell war or heavy rains.</p>
 <p><audio controls="controls" >
@@ -195,7 +195,7 @@ Your browser does not support the audio element.
 </audio></p>
 <div align="center"><img src="/Neural-Voice-Cloning-With-Few-Samples/audio/Speaker_Adaptation/speaker_86/step000016400_alignment.png" /></div>
 
-/*<p><strong>228,  22,  F,    English,    Southern  England</strong></p>
+<!--<p><strong>228,  22,  F,    English,    Southern  England</strong></p>
 
 <p><audio controls="controls" >
 <source src="/deepvoice3_pytorch/audio/deepvoice3_multispeaker/loop/0_20171222_deepvoice3_vctk108_checkpoint_step000300000_speaker3.wav" autoplay/>
@@ -447,14 +447,14 @@ Your browser does not support the audio element.
 Your browser does not support the audio element.
 </audio></p>
 
-<div align="center"><img src="/deepvoice3_pytorch/audio/nyanko/3_keithito/5_20171129_nyanko_checkpoint_step000585000_alignment.png" /></div>*/
+<div align="center"><img src="/deepvoice3_pytorch/audio/nyanko/3_keithito/5_20171129_nyanko_checkpoint_step000585000_alignment.png" /></div>-->
 
 <h2 id="references">References</h2>
 
 <ul>
 <li><a href="https://arxiv.org/pdf/1802.06006.pdf">Sercan O. Arik, Jitong Chen, Kainan Peng, Wei Ping, Yanqi Zhou et al, &ldquo;Neural Voice Cloning with Few Samples&rdquo;, arXiv:1802.06006, Feb. 2018.</a></li>
 </ul>
-/*<div class="footnotes">
+<!--<div class="footnotes">
 
 <hr />
 
@@ -462,7 +462,7 @@ Your browser does not support the audio element.
 <li id="fn:1">I&rsquo;m afraid I don&rsquo;t remember correctly, I may have trained a bit more.
  <a class="footnote-return" href="#fnref:1"><sup>[return]</sup></a></li>
 </ol>
-</div>*/
+</div>-->
 
     
 
@@ -485,7 +485,7 @@ Your browser does not support the audio element.
 
 </div>
 
-/*<script>
+<!--<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -531,7 +531,7 @@ Your browser does not support the audio element.
    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 
-*/
+-->
 
 
 </body>
