Removed minor errors

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/github.min.css">
-<link rel="stylesheet" href="/deepvoice3_pytorch/css/normalize.css">
-<link rel="stylesheet" href="/deepvoice3_pytorch/css/skeleton.css">
-<link rel="stylesheet" href="/deepvoice3_pytorch/css/custom.css">
-<link rel="alternate" href="/deepvoice3_pytorch/index.xml" type="application/rss+xml" title="An open source implementation of Neural Voice Cloning with Few Samples">
+<link rel="stylesheet" href="/Neural-Voice-Cloning-With-Few-Samples/css/normalize.css">
+<link rel="stylesheet" href="/Neural-Voice-Cloning-With-Few-Samples/css/skeleton.css">
+<link rel="stylesheet" href="/Neural-Voice-Cloning-With-Few-Samples/css/custom.css">
+<link rel="alternate" href="/Neural-Voice-Cloning-With-Few-Samples/index.xml" type="application/rss+xml" title="An open source implementation of Neural Voice Cloning with Few Samples">
 <link rel="shortcut icon" href="/deepvoice3_pytorch/favicon.png" type="image/x-icon" />
-<title>An open source implementation of Deep Voice 3: Scaling Text-to-Speech with Convolutional Sequence Learning</title>
+<title>An open source implementation of Neural Voice Cloning with Few Samples</title>
 </head>
 <body>
 
@@ -27,10 +27,10 @@
 <p><br/></p>
 
 <ul>
-<li>Github: <a href="https://github.com/SforAiDl/Neural-Voice-Cloning-With-Few-Samples">https://github.com/r9y9/deepvoice3_pytorch</a></li>
+<li>Github: <a href="https://github.com/SforAiDl/Neural-Voice-Cloning-With-Few-Samples">https://github.com/SforAiDl/Neural-Voice-Cloning-With-Few-Samples</a></li>
 </ul>
 
-<p>This page provides audio samples from the speaker adaptation approach of the open source implementations <a href="https://arxiv.org/abs/1802.06006">Neural Voice Cloning with Few Samples</a>. Samples from single speaker and multi-speaker models follow.</p>
+<p>This page provides audio samples from the speaker adaptation approach of the open source implementations <a href="https://arxiv.org/abs/1802.06006">Neural Voice Cloning with Few Samples</a>.</p>
 
 <p>The model is first trained on 84 speakers. Then the model is adapted to a particular speaker to generate clone samples<p>
 
@@ -122,7 +122,7 @@ Your browser does not support the audio element.
 <!--<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/0421749af908905d181f089f06956fddd0982d47">0421749</a></li>-->
 </ul>
 
-<h3 id="predicted-voices-for-speaker-84">Predicted Voices for speaker 84</h3>
+<h3 id="predicted-voices-for-speaker-84">Predicted Voices for speaker 85</h3>
 
 <!--<p>(69 chars, 11 words)</p>-->
 
@@ -160,7 +160,7 @@ Your browser does not support the audio element.
 <ul>
     <li>Samples from a model adapted to speaker number 86</li>
     <li>Pretrained model: <a href="https://drive.google.com/file/d/14zSDYGBbMEQeA1bNuGo2XmqbTiK3ekLZ/view?usp=sharing">link</a></li>
-    /*<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/0421749af908905d181f089f06956fddd0982d47">0421749</a></li>*/
+    <!--<li>Git commit: <a href="https://github.com/r9y9/deepvoice3_pytorch/tree/0421749af908905d181f089f06956fddd0982d47">0421749</a></li>-->
 </ul>
 
 <h3 id="predicted-voices-for-speaker-86">Predicted Voices for speaker 86</h3>
